--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
         <meta http-equiv="pragma" content="no-cache" />
 
-        <link rel="icon" type="image/png" href="assets/images/dhselogo.jpg"> 
+        <link rel="icon" type="image/png" href="assets/images/dhselogo.jpg">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
         <link href="assets/css/bootstrap-grid.css" rel="stylesheet">
         <link href="assets/css/site-css/site.min.css?v=1638206125" rel="stylesheet">
 
@@ -96,6 +97,58 @@
         .col-lg-6.quota-notes>ul>li {
             list-style: none;
         }
+
+        .footer-widget{
+            background-color: #1C1C1B;
+            padding-left: 45px;
+            padding-right: 45px;
+            padding-top: 25px;
+            padding-bottom: 15px;
+            margin-bottom: -20px;
+            margin-top: 20px;
+        }
+        .footer-widget-column {
+          float: left;
+          width: 33.33%;
+        }
+
+        .footer-widget-row:after {
+          content: "";
+          display: table;
+          clear: both;
+        }
+
+        @media screen and (max-width: 600px) {
+          .footer-widget-column {
+            width: 100%;
+          }
+        }
+
+        .list-group{
+            margin-left: 10px;
+            margin-right: 10px;
+            margin-bottom: 20px;
+        }
+
+        .footer-widget-column-title h2{
+            color: #ffffff;
+            font-size: 20px;
+        }
+
+        .list-address{
+            color: white;
+            margin-left: -10px;
+            padding-left: -15px;
+            padding-right: 15px;           
+        }
+
+        ul .list-item{
+            list-style-type: none;
+            margin-left: -5px;
+            padding-left: -3px;
+        }
+
+        
     </style>
 </head>
 
@@ -482,7 +535,53 @@
         <div id="ajax-status"></div>
         <button class="button" id="submit" name="submit" style="width: 153px; height: 50px; padding: 10px 20px; font-weight: bold; ">Submit</button>
     </div>
+<section class="footer-widget">
+    <div class="footer-widget-row">
+      <div class="footer-widget-column">
+          <div class="footer-widget-column-title">
+            <h2>Address</h2>
+        </div>
+            <ul class="list-address">
+              <li class="list-item"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+  <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+</svg> 18 No Ward, Purba Bakalia, Miakhan Road, Infront of Anada Soap Factory, Bakalia, Chattogram - 4000</li>
+              <li class="list-item"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-open-fill" viewBox="0 0 16 16">
+  <path d="M8.941.435a2 2 0 0 0-1.882 0l-6 3.2A2 2 0 0 0 0 5.4v.314l6.709 3.932L8 8.928l1.291.718L16 5.714V5.4a2 2 0 0 0-1.059-1.765l-6-3.2ZM16 6.873l-5.693 3.337L16 13.372v-6.5Zm-.059 7.611L8 10.072.059 14.484A2 2 0 0 0 2 16h12a2 2 0 0 0 1.941-1.516ZM0 13.373l5.693-3.163L0 6.873v6.5Z"/>
+</svg> hm@pbcchs.edu.bd</li>
+              <li class="list-item"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-plus-fill" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511zM12.5 1a.5.5 0 0 1 .5.5V3h1.5a.5.5 0 0 1 0 1H13v1.5a.5.5 0 0 1-1 0V4h-1.5a.5.5 0 0 1 0-1H12V1.5a.5.5 0 0 1 .5-.5z"/>
+</svg> +880-1234-112233</li>
 
+            </ul>
+      </div>
+      <div class="footer-widget-column">
+        <div class="footer-widget-column-title">
+            <h2>Important Links</h2>
+        </div>
+            <ul class="list-group">
+              <li class="list-group-item">Cras justo odio</li>
+              <li class="list-group-item">Dapibus ac facilisis in</li>
+              <li class="list-group-item">Morbi leo risus</li>
+              <li class="list-group-item">Porta ac consectetur ac</li>
+              <li class="list-group-item">Vestibulum at eros</li>
+            </ul>
+      </div>
+      <div class="footer-widget-column">
+        <div class="footer-widget-column-title">
+            <h2>Important Links</h2>
+        </div>
+            <ul class="list-group">
+              <li class="list-group-item">Cras justo odio</li>
+              <li class="list-group-item">Dapibus ac facilisis in</li>
+              <li class="list-group-item">Morbi leo risus</li>
+              <li class="list-group-item">Porta ac consectetur ac</li>
+              <li class="list-group-item">Vestibulum at eros</li>
+            </ul>
+      </div>
+    </div>
+</section>
+    
 <footer>
     <div class="copyright">
     ©2021, OGIT, All Rights Reserved.
